# Deep

./: .deepignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DeepGit_Full_Codebase_Audit.md  LICENSE  README.md  all_helps.txt  analysis_report.md  audit_help.txt  checkout_help.txt  cleanup_cli.py  commands_help.txt  crash_failures.txt  crash_failures_utf8.txt  fix_imports.py  help_output.txt  methods.txt  old.py  out.txt  push_conflict_out.txt  pyproject.toml  pytest_checkout_log.txt  pytest_daemon_log.txt  pytest_diff_log.txt  pytest_final_log.txt  pytest_final_results.txt  pytest_graph_log.txt  pytest_issue_log.txt  pytest_ls_remote_log.txt  pytest_ls_remote_log_utf8.txt  pytest_merge_log.txt  pytest_output.txt  pytest_output_utf8.txt  pytest_p2p_log.txt  pytest_pr_log.txt  pytest_push_log.txt  pytest_rebase_log.txt  pytest_rebase_log_2.txt  pytest_repo_log.txt  (+24 more)
deep_git/: __init__.py  main.py
docs/: AI_FEATURES.md  CLI_REFERENCE.md  CONTRIBUTING.md  INSTALL.md  INTERNALS.md  STUDIO.md  USER_GUIDE.md  analysis_report.md  architecture.md  audit_results_clean.txt  commands.md  development.md  quickstart.md  security-model.md  testing.md  troubleshooting.md  walkthrough.md
examples/: README.md  basic-workflow.md  ci-testing.yml  example_basic_workflow.md  example_branching.md  example_remote_sync.md
scripts/: branch_explosion.py  continuous_audit.py  enterprise_audit.py  exhaustive_audit.py  final_validation.py  final_verification.py  fix_esc.py  fix_mtime.py  fix_remaining.py  generate_enterprise_repo.py  hyper_reality_certification.py  merge_complexity.py  (+25 more)
(+571 files in other folders)
