[project]
name = "deep-git"
version = "0.1.0"
description = "A robust, concurrency-safe, Git-like version control system."
requires-python = ">=3.10"
dependencies = [
    "filelock>=3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
]

[project.scripts]
deepgit = "deep_git.main:main"
