[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-vcs"
version = "1.0.0"
description = "A next-generation distributed version control system and developer platform."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Deep Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "rich>=10.0.0",
    "cryptography>=3.0.0",
    "aiohttp>=3.7.0",
    "pydantic>=2.0.0",
]

[project.scripts]
deep = "deep.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["deep*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Event loop stopped before Future completed:pytest.PytestUnhandledThreadExceptionWarning",
]
